--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1208,20 +1208,6 @@
   mrclass: '81G20 (53C80)'
   volume: '29'
 
-- number: '4'
-  author: 'Kamal, Sameer'
-  fjournal: 'Systems \& Control Letters'
-  url: 'http://dx.doi.org/10.1016/j.sysconle.2012.02.005'
-  pages: '543-548'
-  year: '2012'
-  title: 'Stabilization of stochastic approximation by step size adaptation'
-  doi: '10.1016/j.sysconle.2012.02.005'
-  issn: '0167-6911'
-  journal: 'Systems Control Lett.'
-  mrnumber: '2910330'
-  mrclass: '93E15 (65C30)'
-  volume: '61'
-
 - number: '3'
   author: 'Kanukurthi, Bhavana and Bhavana Obbattu, Sai Lakshmi and Sekar, Sruthi'
   fjournal: 'Journal of Cryptology. The Journal of the International Association for Cryptologic Research'
@@ -1532,6 +1518,34 @@
   mrclass: '32Q10 (14H60 32Q05)'
   volume: '12'
 
+- number: '4'
+  author: 'Kamal, Sameer'
+  fjournal: 'Systems \& Control Letters'
+  url: 'http://dx.doi.org/10.1016/j.sysconle.2012.02.005'
+  pages: '543-548'
+  year: '2012'
+  title: 'Stabilization of stochastic approximation by step size adaptation'
+  doi: '10.1016/j.sysconle.2012.02.005'
+  issn: '0167-6911'
+  journal: 'Systems Control Lett.'
+  mrnumber: '2910330'
+  mrclass: '93E15 (65C30)'
+  volume: '61'
+
+- number: '2'
+  author: 'Datt, Gopal'
+  fjournal: 'Computational Methods and Function Theory'
+  url: 'https://doi.org/10.1007/s40315-021-00413-5'
+  pages: '307-321'
+  year: '2022'
+  title: 'Meromorphically normal families in several variables'
+  doi: '10.1007/s40315-021-00413-5'
+  issn: '1617-9447'
+  journal: 'Comput. Methods Funct. Theory'
+  mrnumber: '4432484'
+  mrclass: '32A19 (30D45 32H04 32Q45)'
+  volume: '22'
+
 - number: '6'
   author: 'Borkar, Vivek S. and Ghosh, Mrinal K. and Rangarajan, G.'
   fjournal: 'Operations Research Letters'
@@ -1558,6 +1572,20 @@
   mrnumber: '1692203'
   mrclass: '11G05 (11D25 11R11)'
   volume: '89'
+
+- number: '3'
+  author: 'Sain, Debmalya and Roy, Saikat'
+  fjournal: 'Banach Journal of Mathematical Analysis'
+  url: 'https://doi.org/10.1007/s43037-022-00194-6'
+  pages: 'Paper No. 38, 26'
+  year: '2022'
+  title: 'On best approximations in Banach spaces from the perspective of orthogonality'
+  doi: '10.1007/s43037-022-00194-6'
+  issn: '2662-2033'
+  journal: 'Banach J. Math. Anal.'
+  mrnumber: '4423688'
+  mrclass: '46B28 (46B20)'
+  volume: '16'
 
 - author: 'Manna, Ramesh and Shrivastava, Saurabh and Shuin, Kalachand'
   fjournal: 'Nonlinear Analysis. Theory, Methods \& Applications. An International Multidisciplinary Journal'
@@ -1965,6 +1993,20 @@
   mrnumber: '2831116'
   mrclass: '60B20 (15B52)'
   volume: '174'
+
+- number: '4'
+  author: 'Chenakkod, Shabarish and Faraco, Gianluca and Gupta, Subhojoy'
+  fjournal: 'Proceedings of the London Mathematical Society. Third Series'
+  url: 'https://doi.org/10.1112/plms.12432'
+  pages: '478-557'
+  year: '2022'
+  title: 'Translation surfaces and periods of meromorphic differentials'
+  doi: '10.1112/plms.12432'
+  issn: '0024-6115'
+  journal: 'Proc. Lond. Math. Soc. (3)'
+  mrnumber: '4413502'
+  mrclass: '30F30 (32G15 57K20)'
+  volume: '124'
 
 - number: '2'
   author: 'Gadgil, Siddhartha and Kalelkar, Tejas'
@@ -2625,21 +2667,6 @@
   mrclass: '76B15 (74F10)'
   volume: '111'
 
-- number: '1-2'
-  author: 'Balakumar, G. P. and Verma, Kaushal'
-  fjournal: 'Mathematische Zeitschrift'
-  url: 'http://dx.doi.org/10.1007/s00209-012-1060-6'
-  pages: '117-144'
-  year: '2013'
-  mrreviewer: 'Rasul Shafikov'
-  title: 'Some regularity theorems for CR mappings'
-  doi: '10.1007/s00209-012-1060-6'
-  issn: '0025-5874'
-  journal: 'Math. Z.'
-  mrnumber: '3054320'
-  mrclass: '32H40 (32Q45 32V10)'
-  volume: '274'
-
 - number: '1'
   author: 'Adimurthi and Ratnakumar, P. K. and Sohani, Vijay Kumar'
   fjournal: 'Proceedings of the Royal Society of Edinburgh. Section A. Mathematics'
@@ -3014,6 +3041,35 @@
   mrnumber: '979878'
   mrclass: '70L05'
   volume: '23'
+
+- number: '1-2'
+  author: 'Balakumar, G. P. and Verma, Kaushal'
+  fjournal: 'Mathematische Zeitschrift'
+  url: 'http://dx.doi.org/10.1007/s00209-012-1060-6'
+  pages: '117-144'
+  year: '2013'
+  mrreviewer: 'Rasul Shafikov'
+  title: 'Some regularity theorems for CR mappings'
+  doi: '10.1007/s00209-012-1060-6'
+  issn: '0025-5874'
+  journal: 'Math. Z.'
+  mrnumber: '3054320'
+  mrclass: '32H40 (32Q45 32V10)'
+  volume: '274'
+
+- number: '10'
+  author: 'Nandakumaran, Akambadath Keerthiyil and Sankar, Kasinathan'
+  fjournal: 'Mathematical Methods in the Applied Sciences'
+  url: 'https://doi.org/10.1002/mma.8179'
+  pages: '6435-6458'
+  year: '2022'
+  title: 'Homogenization of the heat equation in a noncylindrical domain with randomly oscillating boundary'
+  doi: '10.1002/mma.8179'
+  issn: '0170-4214'
+  journal: 'Math. Methods Appl. Sci.'
+  mrnumber: '4437945'
+  mrclass: '35B27 (35K05 35Q74 35R37 35R60)'
+  volume: '45'
 
 - number: '4'
   author: 'Bagchi, Bhaskar and Datta, Basudeb'
@@ -9245,20 +9301,6 @@
   mrclass: '11A05 (05A05 11A07 11A41)'
   volume: '16'
 
-- number: '2'
-  author: 'Datta, Basudeb'
-  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
-  url: 'http://dx.doi.org/10.1007/BF02863418'
-  pages: '385-388'
-  year: '1994'
-  title: 'Combinatorial manifolds with complementarity'
-  doi: '10.1007/BF02863418'
-  issn: '0253-4142'
-  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
-  mrnumber: '1290958'
-  mrclass: '57Q15 (52B70)'
-  volume: '104'
-
 - number: '4'
   author: 'Banerjee, Abhishek'
   fjournal: 'Canadian Mathematical Bulletin. Bulletin Canadien de Math&eacute;matiques'
@@ -9796,6 +9838,34 @@
   mrnumber: '2779375'
   mrclass: '35R03 (35S30 47D06 47F05 47G30)'
   volume: '12'
+
+- number: '3'
+  author: 'Monsurr&ograve;, S. and Nandakumaran, A. K. and Perugia, C.'
+  fjournal: 'Applied Mathematics and Optimization'
+  url: 'https://doi.org/10.1007/s00245-022-09843-6'
+  pages: 'Paper No. 27, 33'
+  year: '2022'
+  title: 'Exact internal controllability for a problem with imperfect interface'
+  doi: '10.1007/s00245-022-09843-6'
+  issn: '0095-4616'
+  journal: 'Appl. Math. Optim.'
+  mrnumber: '4429316'
+  mrclass: '93B05 (35Q93 93C20)'
+  volume: '85'
+
+- number: '2'
+  author: 'Datta, Basudeb'
+  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
+  url: 'http://dx.doi.org/10.1007/BF02863418'
+  pages: '385-388'
+  year: '1994'
+  title: 'Combinatorial manifolds with complementarity'
+  doi: '10.1007/BF02863418'
+  issn: '0253-4142'
+  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
+  mrnumber: '1290958'
+  mrclass: '57Q15 (52B70)'
+  volume: '104'
 
 - author: 'Yadav, Manoj K.'
   fjournal: 'Applied Mathematics and Computation'
@@ -16455,20 +16525,6 @@
   mrclass: '47A13 (47A56)'
   volume: '78'
 
-- number: '10'
-  author: 'Chitra, R. and Kumar, C. Nagraj and Sen, Diptiman'
-  fjournal: 'Modern Physics Letters A. Particles and Fields, Gravitation, Cosmology, Nuclear Physics'
-  url: 'http://dx.doi.org/10.1142/S0217732392003499'
-  pages: '855-863'
-  year: '1992'
-  title: 'Supersymmetry in the two-anyon problem'
-  doi: '10.1142/S0217732392003499'
-  issn: '0217-7323'
-  journal: 'Modern Phys. Lett. A'
-  mrnumber: '1157773'
-  mrclass: '81T60 (81Q60)'
-  volume: '7'
-
 - author: 'Balachandran, A. P. and K&uuml;rk&ccedil;c&uuml;o\u glu, S. and Vaidya, S.'
   url: 'http://dx.doi.org/10.1142/9789812707468'
   mrnumber: '2304140'
@@ -16693,6 +16749,34 @@
   mrclass: '76D10'
   volume: '55'
 
+- number: '9'
+  author: 'Belton, Alexander and Guillot, Dominique and Khare, Apoorva and Putinar, Mihai'
+  fjournal: 'Journal of the European Mathematical Society (JEMS)'
+  url: 'https://doi.org/10.4171/jems/1145'
+  pages: '3109-3160'
+  year: '2022'
+  title: 'Moment-sequence transforms'
+  doi: '10.4171/jems/1145'
+  issn: '1435-9855'
+  journal: 'J. Eur. Math. Soc. (JEMS)'
+  mrnumber: '4422209'
+  mrclass: '15B48 (26C05 30E10 44A60)'
+  volume: '24'
+
+- number: '10'
+  author: 'Chitra, R. and Kumar, C. Nagraj and Sen, Diptiman'
+  fjournal: 'Modern Physics Letters A. Particles and Fields, Gravitation, Cosmology, Nuclear Physics'
+  url: 'http://dx.doi.org/10.1142/S0217732392003499'
+  pages: '855-863'
+  year: '1992'
+  title: 'Supersymmetry in the two-anyon problem'
+  doi: '10.1142/S0217732392003499'
+  issn: '0217-7323'
+  journal: 'Modern Phys. Lett. A'
+  mrnumber: '1157773'
+  mrclass: '81T60 (81Q60)'
+  volume: '7'
+
 - number: '4'
   author: 'Sachdev, P. L. and Sarathy, R.'
   fjournal: 'Studies in Applied Mathematics'
@@ -16803,6 +16887,20 @@
   mrnumber: '2203616'
   mrclass: '13H15'
   volume: '205'
+
+- number: '1'
+  author: 'Ghara, Soumitra and Kumar, Surjit and Pramanick, Paramita'
+  fjournal: 'Israel Journal of Mathematics'
+  url: 'https://doi.org/10.1007/s11856-021-2268-0'
+  pages: '331-360'
+  year: '2022'
+  title: '$\Bbb K$-homogeneous tuple of operators on bounded symmetric domains'
+  doi: '10.1007/s11856-021-2268-0'
+  issn: '0021-2172'
+  journal: 'Israel J. Math.'
+  mrnumber: '4425339'
+  mrclass: '47B38 (32A35 32M15 46E22 47A13 47B37)'
+  volume: '247'
 
 - number: '3'
   author: 'Chakrabarti, A. and Sahoo, T.'
@@ -17808,6 +17906,20 @@
   mrclass: '35-01 (35A30 35C05 35C10 35C20)'
   volume: '113'
 
+- number: '7'
+  author: 'Gehlawat, Sahil and Verma, Kaushal'
+  fjournal: 'Proceedings of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/proc/15795'
+  pages: '2925-2936'
+  year: '2022'
+  title: 'On Grauert&#39;s examples of complete K&auml;hler metrics'
+  doi: '10.1090/proc/15795'
+  issn: '0002-9939'
+  journal: 'Proc. Amer. Math. Soc.'
+  mrnumber: '4428878'
+  mrclass: '32Q05 (32Q10)'
+  volume: '150'
+
 - author: 'Sau, Haripada'
   fjournal: 'New York Journal of Mathematics'
   url: 'http://nyjm.albany.edu:8000/j/2015/21_1347.html'
@@ -18072,6 +18184,19 @@
   mrnumber: '3701789'
   mrclass: '65R20 (45B05)'
   volume: '11'
+
+- author: 'Mallik, Gouranga'
+  fjournal: 'Computers \& Mathematics with Applications. An International Journal'
+  url: 'https://doi.org/10.1016/j.camwa.2022.04.021'
+  pages: '312-325'
+  year: '2022'
+  title: 'Goal-oriented a posteriori error estimation for the biharmonic problem based on an equilibrated moment tensor'
+  doi: '10.1016/j.camwa.2022.04.021'
+  issn: '0898-1221'
+  journal: 'Comput. Math. Appl.'
+  mrnumber: '4426043'
+  mrclass: '65N30 (65N15 65N50)'
+  volume: '117'
 
 - number: '2'
   author: 'Chakrabarti, A. and Sahoo, T.'
