Updated Postdoc and Postdoc Alumni page

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,10 @@
+- name: "Sumana Hatui"
+  position: "Raman PDF"
+  phd: "HRI, Allahabad"
+  area: "Group Theory, Schur multiplier"
+  start: "2019"
+  end: "2022"
+  present: "Assistant Professor, NISER Bhubaneswar"
 
 - name: "Divya Khurana"
   position: "UGC Kothari"
