--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -219,6 +219,7 @@ aug2022:
     instructor: Bharathwaj Palvannan
     timing: 'Tue, Thu: 10:00 - 11:30'
     venue: LH-5
+    webpage: https://pbharathwaj.github.io/2022/07/13/algebraicnumbertheoryfall2022.html
   - name : Introduction to Analytic Number Theory
     code: MA 317
     instructor: Soumya Das
