--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -153,7 +153,7 @@ aug2022:
     prereq-courses: ''
     ug-prereq-courses: UM 102
     timing: 'Tue, Thu: 10:00 - 11:30'
-    venue: LH-1/LH-3
+    venue: LH-1
   - name: 'Analysis I: Real Anaysis'
     instructor: Sunadaram Thangavelu/R. Venkatesh
     timing: 'Mon, Wed, Fri: 10:00 - 11:00'
