--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -201,7 +201,7 @@ aug2022:
     code: MA 242
     prereq-courses: MA 241
     ug-prereq-courses: ''
-    webpage: 
+    webpage: http://math.iisc.ac.in/~ssil/Courses/Intro_PDE_Fall22/PDE1Fall22.html
     venue: LH-5
   electives:
   - name: Representation Theory of Finite Groups
