Added UM201 timing

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -124,6 +124,7 @@ aug2022:
   - code: UM 201
     instructor: Arvind Ayyer
     name: Probability and Statistics
+    timing: 'Mon, Wed, Fri: 11:00 - 12:00'
   - code: UM 501
     instructor: UG Coordinator
     name: "Masters project A"
