--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -1909,17 +1909,6 @@
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '3903568'
 
-- author: 'Nandakumaran, A. K. and Rajesh, M.'
-  fjournal: 'Electronic Journal of Differential Equations'
-  pages: 'No. 17, 19'
-  year: '2001'
-  mrreviewer: 'Alain Brillard'
-  title: 'Homogenization of a nonlinear degenerate parabolic differential equation'
-  mrclass: '35B27 (35K55 35K65 49J45)'
-  issn: '1072-6691'
-  journal: 'Electron. J. Differential Equations'
-  mrnumber: '1824787'
-
 - number: '1'
   author: 'Mahadevan, Rajesh and Nandakumaran, A. K. and Prakash, Ravi'
   fjournal: 'Applied Mathematics and Optimization'
@@ -2090,6 +2079,30 @@
   mrnumber: '3164504'
   mrclass: '35R03 (35A02 35H20 35K08 35Q41 43A80)'
   volume: '95'
+
+- number: '12'
+  author: 'Roncal, Luz and Thangavelu, Sundaram'
+  fjournal: 'International Mathematics Research Notices. IMRN'
+  url: 'https://doi.org/10.1093/imrn/rnab051'
+  pages: '9598--9602'
+  year: '2022'
+  title: 'Corrigendum to: An extension problem and trace Hardy inequality for the sublaplacian on $H$-type groups'
+  doi: '10.1093/imrn/rnab051'
+  mrclass: '58J05 (35H20 35R03 43A80 53C17)'
+  issn: '1073-7928'
+  journal: 'Int. Math. Res. Not. IMRN'
+  mrnumber: '4436214'
+
+- author: 'Nandakumaran, A. K. and Rajesh, M.'
+  fjournal: 'Electronic Journal of Differential Equations'
+  pages: 'No. 17, 19'
+  year: '2001'
+  mrreviewer: 'Alain Brillard'
+  title: 'Homogenization of a nonlinear degenerate parabolic differential equation'
+  mrclass: '35B27 (35K55 35K65 49J45)'
+  issn: '1072-6691'
+  journal: 'Electron. J. Differential Equations'
+  mrnumber: '1824787'
 
 - number: '1'
   author: 'Bera, Sayani and Pal, Ratna'
@@ -8179,20 +8192,6 @@
   mrclass: '34K30 (34K07 35R10 47D06 47N20)'
   volume: '8'
 
-- number: '5'
-  author: 'Balodi, Mamta and Banerjee, Abhishek and Ray, Samarpita'
-  fjournal: 'Canadian Journal of Mathematics. Journal Canadien de Math\''ematiques'
-  url: 'https://doi.org/10.4153/s0008414x19000403'
-  pages: '1352--1385'
-  year: '2020'
-  title: 'Cohomology of modules over $H$-categories and co-$H$-categories'
-  doi: '10.4153/s0008414x19000403'
-  issn: '0008-414X'
-  journal: 'Canad. J. Math.'
-  mrnumber: '4152544'
-  mrclass: '16S40 (16T05 18E05)'
-  volume: '72'
-
 - number: '4'
   author: 'Kor\''anyi, Adam and Misra, Gadadhar'
   fjournal: 'Integral Equations and Operator Theory'
@@ -8372,6 +8371,34 @@
   mrnumber: '2201890'
   mrclass: '91A23 (49N70 91A05 93C57)'
   volume: '128'
+
+- number: '5'
+  author: 'Balodi, Mamta and Banerjee, Abhishek and Ray, Samarpita'
+  fjournal: 'Canadian Journal of Mathematics. Journal Canadien de Math\''ematiques'
+  url: 'https://doi.org/10.4153/s0008414x19000403'
+  pages: '1352--1385'
+  year: '2020'
+  title: 'Cohomology of modules over $H$-categories and co-$H$-categories'
+  doi: '10.4153/s0008414x19000403'
+  issn: '0008-414X'
+  journal: 'Canad. J. Math.'
+  mrnumber: '4152544'
+  mrclass: '16S40 (16T05 18E05)'
+  volume: '72'
+
+- number: '4'
+  author: 'Shorey, T. N. and Sinha, Sneh Bala'
+  fjournal: 'Koninklijke Nederlandse Akademie van Wetenschappen. Indagationes Mathematicae. New Series'
+  url: 'https://doi.org/10.1016/j.indag.2022.02.006'
+  pages: '801--815'
+  year: '2022'
+  title: 'Extension of Laguerre polynomials with negative arguments'
+  doi: '10.1016/j.indag.2022.02.006'
+  issn: '0019-3577'
+  journal: 'Indag. Math. (N.S.)'
+  mrnumber: '4435900'
+  mrclass: '33C45'
+  volume: '33'
 
 - number: '7'
   author: 'Misra, Gadadhar and Shyam Roy, Subrata and Zhang, Genkai'
@@ -9288,19 +9315,6 @@
   mrclass: '44A12 (42B20)'
   volume: '174'
 
-- number: '2'
-  author: 'Chandran, L. Sunil and Rajendraprasad, Deepak and Singh, Nitin'
-  fjournal: 'Discrete Mathematics \& Theoretical Computer Science. DMTCS.'
-  pages: '35--40'
-  year: '2014'
-  mrreviewer: 'Bojan Ba\AA !`i\"A'
-  title: 'On additive combinatorics of permutations of $\Bbb {Z}_n$'
-  issn: '1365-8050'
-  journal: 'Discrete Math. Theor. Comput. Sci.'
-  mrnumber: '3232100'
-  mrclass: '11A05 (05A05 11A07 11A41)'
-  volume: '16'
-
 - number: '4'
   author: 'Banerjee, Abhishek'
   fjournal: 'Canadian Mathematical Bulletin. Bulletin Canadien de Math\''ematiques'
@@ -9621,6 +9635,31 @@
   mrnumber: '747591'
   mrclass: '78A05'
   volume: '29'
+
+- number: '2'
+  author: 'Chandran, L. Sunil and Rajendraprasad, Deepak and Singh, Nitin'
+  fjournal: 'Discrete Mathematics \& Theoretical Computer Science. DMTCS.'
+  pages: '35--40'
+  year: '2014'
+  mrreviewer: 'Bojan Ba\AA !`i\"A'
+  title: 'On additive combinatorics of permutations of $\Bbb {Z}_n$'
+  issn: '1365-8050'
+  journal: 'Discrete Math. Theor. Comput. Sci.'
+  mrnumber: '3232100'
+  mrclass: '11A05 (05A05 11A07 11A41)'
+  volume: '16'
+
+- number: '3'
+  author: 'Londhe, Mayuresh'
+  fjournal: 'Indiana University Mathematics Journal'
+  pages: '1131--1154'
+  year: '2022'
+  title: 'Recurrence in the dynamics of meromorphic correspondences and holomorphic semigroups'
+  issn: '0022-2518'
+  journal: 'Indiana Univ. Math. J.'
+  mrnumber: '4448581'
+  mrclass: '37F05 (32H50 37B20 60B10)'
+  volume: '71'
 
 - mrnumber: '1109918'
   pages: 'xx+578'
@@ -11314,6 +11353,20 @@
   mrclass: '76B15'
   volume: '3'
 
+- number: '2'
+  author: 'Biswas, Indranil and Gupta, Subhojoy and Mj, Mahan and Whang, Junho Peter'
+  fjournal: 'Geometry \& Topology'
+  url: 'https://doi.org/10.2140/gt.2022.26.679'
+  pages: '679--719'
+  year: '2022'
+  title: 'Surface group representations in SL2($\Bbb{C}$) with finite mapping class orbits'
+  doi: '10.2140/gt.2022.26.679'
+  issn: '1465-3060'
+  journal: 'Geom. Topol.'
+  mrnumber: '4444267'
+  mrclass: '57K20 (20C99 20E36 20F29 20F34 20F38 57M05)'
+  volume: '26'
+
 - number: '1-2'
   author: 'Mandal, S. C. and Chakrabarti, A.'
   fjournal: 'Calcutta Mathematical Society. Review Bulletin'
@@ -12014,6 +12067,20 @@
   mrnumber: '735245'
   mrclass: '93E20 (60H10)'
   volume: '4'
+
+- number: '1'
+  author: 'Bagchi, S. and Hait, S. and Senthil Raani, K. S.'
+  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
+  url: 'https://doi.org/10.1007/s12044-022-00683-6'
+  pages: 'Paper No. 35, 26'
+  year: '2022'
+  title: '$L^p-L^q$ estimates for generalized spherical averages'
+  doi: '10.1007/s12044-022-00683-6'
+  issn: '0253-4142'
+  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
+  mrnumber: '4431051'
+  mrclass: '42B15 (42B25)'
+  volume: '132'
 
 - number: '1'
   author: 'Gopalakrishna, A. V. and Ganagi, M. S.'
@@ -14164,20 +14231,6 @@
   mrclass: '60F17 (60J60)'
   volume: '61'
 
-- number: '5'
-  author: 'Ghosh, Mrinal K. and Kumar, K. Suresh and Pal, Chandan'
-  fjournal: 'Stochastic Analysis and Applications'
-  url: 'https://doi.org/10.1080/07362994.2016.1180995'
-  pages: '835--851'
-  year: '2016'
-  title: 'Zero-sum risk-sensitive stochastic games for continuous time Markov chains'
-  doi: '10.1080/07362994.2016.1180995'
-  issn: '0736-2994'
-  journal: 'Stoch. Anal. Appl.'
-  mrnumber: '3529198'
-  mrclass: '91A15 (60J28 60J75 93E20)'
-  volume: '34'
-
 - number: '3'
   author: 'Banerjee, Tamal and Ghosh, Mrinal K. and Iyer, Srikanth K.'
   fjournal: 'Stochastic Analysis and Applications'
@@ -14576,6 +14629,34 @@
   mrclass: '60J10 (00A08 05A05)'
   volume: '55'
 
+- number: '5'
+  author: 'Ghosh, Mrinal K. and Kumar, K. Suresh and Pal, Chandan'
+  fjournal: 'Stochastic Analysis and Applications'
+  url: 'https://doi.org/10.1080/07362994.2016.1180995'
+  pages: '835--851'
+  year: '2016'
+  title: 'Zero-sum risk-sensitive stochastic games for continuous time Markov chains'
+  doi: '10.1080/07362994.2016.1180995'
+  issn: '0736-2994'
+  journal: 'Stoch. Anal. Appl.'
+  mrnumber: '3529198'
+  mrclass: '91A15 (60J28 60J75 93E20)'
+  volume: '34'
+
+- number: '1'
+  author: 'Ghosh, Mrinal K. and Golui, Subrata and Pal, Chandan and Pradhan, Somnath'
+  fjournal: 'Applied Mathematics and Optimization'
+  url: 'https://doi.org/10.1007/s00245-022-09878-9'
+  pages: 'Paper No. 6, 31'
+  year: '2022'
+  title: 'Nonzero-sum risk-sensitive continuous-time stochastic games with ergodic costs'
+  doi: '10.1007/s00245-022-09878-9'
+  issn: '0095-4616'
+  journal: 'Appl. Math. Optim.'
+  mrnumber: '4436615'
+  mrclass: '91A15 (49L12 90C40)'
+  volume: '86'
+
 - number: '3'
   author: 'Mal, Arpita and Paul, Kallol and Rao, T. S. S. R. K. and Sain, Debmalya'
   fjournal: 'Monatshefte f\"ur Mathematik'
@@ -14847,6 +14928,20 @@
   mrnumber: '3846155'
   mrclass: '11F50 (11F46)'
   volume: '336'
+
+- number: '4'
+  author: 'Shorey, T. N. and Sinha, Sneh Bala'
+  fjournal: 'Koninklijke Nederlandse Akademie van Wetenschappen. Indagationes Mathematicae. New Series'
+  url: 'https://doi.org/10.1016/j.indag.2022.03.001'
+  pages: '880--884'
+  year: '2022'
+  title: 'Extension of Laguerre polynomials with negative arguments II'
+  doi: '10.1016/j.indag.2022.03.001'
+  issn: '0019-3577'
+  journal: 'Indag. Math. (N.S.)'
+  mrnumber: '4435905'
+  mrclass: '33C45'
+  volume: '33'
 
 - number: '5'
   author: 'Bennett, Nathan and Iyer, Srikanth K. and Jammalamadaka, S. Rao'
@@ -18322,6 +18417,19 @@
   mrnumber: '2415017'
   mrclass: '53C21 (53C20)'
   volume: '12'
+
+- number: '1'
+  author: 'Ayyer, Arvind and Chhita, Sunil'
+  fjournal: 'Transactions of the London Mathematical Society'
+  url: 'https://doi.org/10.1112/tlm3.12039'
+  pages: '493--526'
+  year: '2021'
+  title: 'Correlations in totally symmetric self-complementary plane partitions'
+  doi: '10.1112/tlm3.12039'
+  journal: 'Trans. London Math. Soc.'
+  mrnumber: '4440458'
+  mrclass: '05A17 (60K35 82B20)'
+  volume: '8'
 
 - pages: 'S4PP1 (14pp)'
   year: '2022'
