faculty alumni first steps

--- a/_data/fac-alumni.yaml
+++ b/_data/fac-alumni.yaml
@@ -28,4 +28,23 @@
 - name: Sameer Jalnapurkar
 - name: C.R. Pradeep
 - name: G. V. Ravindra
+
 - name: S. Viswanath
+  position: Faculty, IMSc. Chennai
+  website: https://www.imsc.res.in/s_viswanath
+
+- name: Dilip Patil 
+  website: http://www.math.iisc.ernet.in/~patil/
+
+- name: Gadadhar Misra
+  position: "JC Bose National Fellow at ISI Bangalore, and Visiting Professor at IIT Gandhinagar"
+  website: https://www.isibang.ac.in/~gm/
+
+- name: S. Thangavelu
+  position: Honourary Professor at IISc
+  website: http://math.iisc.ac.in/~veluma/
+
+- name: Mrinal K. Ghosh
+
+- name: Basudeb Datta
+
