--- a/_data/fac-alumni.yaml
+++ b/_data/fac-alumni.yaml
@@ -33,6 +33,10 @@
   position: Faculty, IMSc. Chennai
   website: https://www.imsc.res.in/s_viswanath
 
+- name: Pooja Singla
+  position: Faculty, IIT Kanpur
+  website: https://www.iitk.ac.in/new/pooja-singla
+
 - name: Dilip Patil 
   website: http://www.math.iisc.ernet.in/~patil/
 
