--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -21,7 +21,7 @@
   position: "NBHM/NPDF/Raman PDF"
   phd: "IIT Madras"
   area: "Matrix theory, in connection with positivity and combinatorics"
-  start: "2019"
+  start: "2018"
   end: "2022"
   present: "[Assistant Professor, IIT Gandhinagar](http://projesh.people.iitgn.ac.in/)"
 
@@ -94,9 +94,9 @@
   position: "NBHM"
   phd: "Institute of Mathematical Sciences, Chennai"
   area: "Combinatorics, Infinite-dimensional Lie algebras, Spectral graph theory"
-  start: "2021"
+  start: "2020"
   end: "2021"
-  present: "IIT, Dharwad" 
+  present: "Assistant Professor, IIT, Dharwad" 
 
 - name: "Anupam Gumber"  
   position: "NBHM"
@@ -108,7 +108,7 @@
 
 
 - name: "Ramesh Manna"  
-  position: "Kothari/IISc Raman PDF/INSPIRE Faculty"  
+  position: "Kothari/Raman PDF/INSPIRE Faculty"  
   phd: "HRI, Allahabad"  
   area: "Harmonic analysis"  
   start: "2020"  
