--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -23,7 +23,7 @@
   area: "Matrix theory, in connection with positivity and combinatorics"
   start: "2018"
   end: "2022"
-  present: "[Assistant Professor, IIT Gandhinagar](http://projesh.people.iitgn.ac.in/)"
+  present: [Assistant Professor, IIT Gandhinagar](http://projesh.people.iitgn.ac.in/)
 
 
 - name: "Sumana Hatui"
@@ -32,7 +32,7 @@
   area: "Group Theory, Schur multiplier"
   start: "2019"
   end: "2022"
-  present: "[Assistant Professor, NISER Bhubaneswar](https://sites.google.com/view/sumana-hatui/)"
+  present: <a href="https://sites.google.com/view/sumana-hatui/">Assistant Professor, NISER Bhubaneswar</a>
 
 - name: "Divya Khurana"
   position: "UGC Kothari"
