--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -32,7 +32,7 @@
   area: "Group Theory, Schur multiplier"
   start: "2019"
   end: "2022"
-  present: <a href="https://sites.google.com/view/sumana-hatui/">Assistant Professor, NISER Bhubaneswar</a>
+  present: <a target="_blank" href="https://sites.google.com/view/sumana-hatui/">Assistant Professor, NISER Bhubaneswar</a>
 
 - name: "Divya Khurana"
   position: "UGC Kothari"
