--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -48,7 +48,7 @@
   area: "Geometry of normed linear spaces"
   start: "2021"
   end: "2022"
-  present:
+  present: "Postdoctoral Fellow, Universidad de Granada, Spain"
 
 - name: "Sneh Bala Sinha"
   position: "NBHM"
