--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -23,7 +23,7 @@
   area: "Matrix theory, in connection with positivity and combinatorics"
   start: "2018"
   end: "2022"
-  present: [Assistant Professor, IIT Gandhinagar](http://projesh.people.iitgn.ac.in/)
+  present: "[Assistant Professor, IIT Gandhinagar](http://projesh.people.iitgn.ac.in/)"
 
 
 - name: "Sumana Hatui"
