--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -153,7 +153,7 @@
   area: "Probability and Stochastic processes"  
   start: "2018"  
   end: "2018"  
-  present: <a target="_blank" "https://www.iitbhilai.ac.in/index.php?pid=profile_drkuldeep>IIT, Bhilai</a>
+  present: <a target="_blank" "https://www.iitbhilai.ac.in/index.php?pid=profile_drkuldeep>Assistant Professor, IIT Bhilai</a>
 
 - name: "Arun Maiti"  
   position: "NBHM"  
