--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -96,7 +96,7 @@
   area: "Combinatorics, Infinite-dimensional Lie algebras, Spectral graph theory"
   start: "2020"
   end: "2021"
-  present: <a target="_blank" href="https://sites.google.com/view/g-arunkumar/>Assistant Professor, IIT Madras</a>
+  present: <a target="_blank" href="https://sites.google.com/view/g-arunkumar/">Assistant Professor, IIT Madras</a>
 
 - name: "Anupam Gumber"  
   position: "NBHM"
@@ -153,7 +153,7 @@
   area: "Probability and Stochastic processes"  
   start: "2018"  
   end: "2018"  
-  present: <a target="_blank" "https://www.iitbhilai.ac.in/index.php?pid=profile_drkuldeep>Assistant Professor, IIT Bhilai</a>
+  present: <a target="_blank" href="https://www.iitbhilai.ac.in/index.php?pid=profile_drkuldeep">Assistant Professor, IIT Bhilai</a>
 
 - name: "Arun Maiti"  
   position: "NBHM"  
