Updated PhD and Int PhD 2022 Students List

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -573,7 +573,7 @@
   user-id: ashutoshjs
   image: true  
 
-- name: Jadhav Pratik Ashok Pushpa
+- name: Pratik Ashok Jadhav
   year-of-joining: 2022
   programme: PhD
   user-id: pratikjadhav
